battlehistoryRepository実装
